// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App renders correctly when key is pressed 1`] = `
<div
  className="App"
>
  <span
    className="App__KeyCode"
  >
    keyCode
  </span>
  <div
    className="Box__Container"
  >
    <div
      className="Box"
    >
      <h2>
        e.key
      </h2>
      <span>
        key
      </span>
    </div>
    <div
      className="Box"
    >
      <h2>
        e.which
      </h2>
      <span>
        which
      </span>
    </div>
    <div
      className="Box"
    >
      <h2>
        e.code
      </h2>
      <span>
        code
      </span>
    </div>
  </div>
</div>
`;

exports[`App renders correctly when no key is pressed 1`] = `
<div
  className="App"
>
  <span
    className="App__KeyCode"
  >
    Press key
  </span>
</div>
`;
